# chartx

./: .gitignore  LICENSE  README.md  pom.xml
src/main/java/com/apokalypsix/chartx/: ChartX.java
src/main/java/com/apokalypsix/chartx/benchmark/: BenchmarkResult.java  ChartXBenchmark.java  ComplexBenchmark.java  JFreeChartBenchmark.java  MetalBenchmark.java  MetalQuickTest.java  MicroBenchmark.java  MillionPointsBenchmark.java  MillionPointsHeadlessBenchmark.java  MultiBackendBenchmark.java  RenderBenchmark.java  RenderProfiler.java
src/main/java/com/apokalypsix/chartx/chart/: AbstractChartComponent.java  Chart.java  ChartFactory.java  ChartFeatureManager.java  ChartLayout.java  ChartType.java  VisualizationPanel.java
src/main/java/com/apokalypsix/chartx/chart/axis/: CategoryAxis.java  HorizontalAxis.java  PriceRange.java  TimeAxis.java  TimeRange.java  Viewport.java  YAxis.java
src/main/java/com/apokalypsix/chartx/chart/axis/scale/: AxisScale.java  LinearScale.java  LogarithmicScale.java  (+1 more)
src/main/java/com/apokalypsix/chartx/chart/data/: AbstractData.java  BandPoint.java  BoxWhiskerData.java  BubbleData.java  Data.java  DataListener.java  GanttData.java  GaugeData.java  GroupedColumnData.java  HeatmapData.java  HistogramData.java  OHLCBar.java  OhlcData.java  PieData.java  RadarData.java  StackedSeriesGroup.java  Timeframe.java  TreemapData.java  VectorFieldData.java  WaterfallData.java  XyData.java  XyyData.java
src/main/java/com/apokalypsix/chartx/chart/export/: ExportFormat.java  ExportOptions.java  ExportService.java
src/main/java/com/apokalypsix/chartx/chart/finance/: FinanceChart.java
src/main/java/com/apokalypsix/chartx/chart/interaction/: ChartModifier.java  ChartModifierBase.java  ChartModifierGroup.java  ChartSelectionListener.java  DrawingTool.java  ModifierSurface.java  SelectionTool.java
src/main/java/com/apokalypsix/chartx/chart/overlay/: AnchorPoint.java  Annotation.java  Arc.java  Arrow.java  BoxAnnotation.java  Callout.java  Drawing.java  Ellipse.java  ExtendedLine.java  FibonacciArc.java  FibonacciExtension.java  FibonacciFan.java  FibonacciRetracement.java  FibonacciTimeZones.java  GannBox.java  GannFan.java  HorizontalLine.java  MarkerAnnotation.java  MeasureTool.java  Note.java  ParallelChannel.java  Pitchfork.java  Polygon.java  Polyline.java  PriceLabel.java  PriceRange.java  Ray.java  Rectangle.java  RegressionChannel.java  TextAnnotation.java  TrendLine.java  Triangle.java  VerticalLine.java
src/main/java/com/apokalypsix/chartx/chart/series/: AbstractRenderableSeries.java  BandSeries.java  BoundedRenderable.java  BoxPlotSeries.java  BubbleSeries.java  CandlestickSeries.java  ContourSeries.java  ErrorBarSeries.java  GanttSeries.java  GroupedColumnSeries.java  HeatmapSeries.java  HistogramSeries.java  HorizontalBarSeries.java  ImpulseSeries.java  LineSeries.java  LinearGaugeSeries.java  PieSeries.java  PolarLineSeries.java  RadarSeries.java  RadialGaugeSeries.java  RenderableSeries.java  ScatterSeries.java  SeriesType.java  SplineLineSeries.java  SplineMountainSeries.java  StackedColumnSeries.java  StackedMountainSeries.java  SunburstSeries.java  TreemapSeries.java  VectorFieldSeries.java  VisualizationGroup.java  WaterfallSeries.java
src/main/java/com/apokalypsix/chartx/chart/style/: BandSeriesOptions.java  BoxPlotSeriesOptions.java  BubbleSeriesOptions.java  ChartStyle.java  ContourSeriesOptions.java  DataLabelConfig.java  ErrorBarSeriesOptions.java  GanttSeriesOptions.java  GroupedColumnSeriesOptions.java  HeatmapSeriesOptions.java  HistogramSeriesOptions.java  ImpulseSeriesOptions.java  LegendConfig.java  LineSeriesOptions.java  LineStyle.java  LinearGaugeSeriesOptions.java  OhlcSeriesOptions.java  PieSeriesOptions.java  PolarSeriesOptions.java  RadarSeriesOptions.java  RadialGaugeSeriesOptions.java  ScatterSeriesOptions.java  SeriesOptions.java  SplineSeriesOptions.java  StackedSeriesOptions.java  SunburstSeriesOptions.java  TooltipConfig.java  TreemapSeriesOptions.java  VectorFieldSeriesOptions.java  WaterfallSeriesOptions.java
src/main/java/com/apokalypsix/chartx/core/coordinate/: AxisSpecificCoordinateSystem.java  CartesianCoordinateSystem.java  CoordinateSystem.java  MultiAxisCoordinateSystem.java  PolarCoordinateSystem.java  YAxisManager.java
src/main/java/com/apokalypsix/chartx/core/data/: DataListenerSupport.java  HeikinAshiTransform.java  SimulatedDataProvider.java  StackingCalculator.java  TPOAggregator.java  TimeframeAggregator.java
src/main/java/com/apokalypsix/chartx/core/export/: LayerCompositor.java  RasterExportStrategy.java  SVGBuilder.java
src/main/java/com/apokalypsix/chartx/core/interaction/: DataPointHitTester.java  DataPointSelectionHandler.java  DrawingInteractionHandler.java  RegionSelectionHandler.java
src/main/java/com/apokalypsix/chartx/core/overlay/: AnnotationGenerator.java  AnnotationManager.java  DaySeparatorGenerator.java  SessionBoundaryGenerator.java
src/main/java/com/apokalypsix/chartx/examples/chart/: AllSeriesTypesDemo.java  ChartDemo.java  ChartLayoutDemo.java  ColumnBarDemo.java  DifferenceChartDemo.java  DualAxisDemo.java  GanttVectorDemo.java  GaugeDemo.java  HeatmapContourDemo.java  HistogramDemo.java  IndicatorsDemo.java  LogScaleDemo.java  ModifierDemo.java  MultiSeriesDemo.java  MultiTimeframeDemo.java  OhlcDemo.java  PiePolarDemo.java  PopulationPyramidDemo.java  ProjectedValuesDemo.java  SameDataMultiViewDemo.java  ScatterPlotDemo.java  SeriesOptionsDemo.java  SplineChartsDemo.java  StackedChartsDemo.java  StatisticalDemo.java  TPODemo.java  TreemapSunburstDemo.java
src/main/native/dx12/: CMakeLists.txt
src/main/native/dx12/include/: DX12Common.h
src/main/native/dx12/shaders/: Default.hlsl  Simple.hlsl  Text.hlsl
src/main/native/dx12/src/: DX12Native.cpp
src/main/native/metal/: CMakeLists.txt  build.sh
src/main/native/metal/shaders/: Default.metal  Simple.metal  Text.metal  compile.sh
src/main/native/metal/src/: MetalNative.mm
src/main/resources/: tpo-demo-data.json
src/test/java/com/apokalypsix/chartx/core/coordinate/: CartesianCoordinateSystemTest.java
(+220 files in other folders)
